--- a/_ui/css/source/main.sass
+++ b/_ui/css/source/main.sass
@@ -25,8 +25,6 @@ a
   .trigger
     background-color: $list-item-bg-color
     font-weight: bold
-    position: relative
-    z-index: 1
 
     &:hover, &:focus
       color: $link-secondary-color
@@ -36,12 +34,16 @@ a
       display: inline-block
       float: right
       vertical-align: middle
+
   ul
     +box-shadow
+    background-color: #fff
     display: none
     list-style: none
-    position: relative
+    position: absolute
     visibility: hidden
+    z-index: 1
+    width: 100%
 
     a:hover, a:focus
       background-color: $link-secondary-color
