--- a/_ui/css/source/_defaults.sass
+++ b/_ui/css/source/_defaults.sass
@@ -9,3 +9,36 @@ $link-tertiary-color: #fff
 $list-item-bg-color: #ccc
 
 $shadow-color: #999
+
+
+*
+  +box-sizing
+
+.offscreen, .accessLabel
+  display: block
+  left: -50000px
+  position: absolute
+  
+body, button
+  font-family: Menlo, Courier, monospace
+  padding: 20px
+
+button
+  border: none
+  font-size: 1em
+  padding: 0
+  text-align: left
+  -webkit-appearance: none
+  
+a, button
+  color: $link-primary-color
+  cursor: pointer
+
+h1, h2, h3, p
+  margin-bottom: $default-margin
+  
+h1
+  font-size: 1.5em
+
+h2
+  font-size: 1em
