--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -2,7 +2,11 @@
 @import 'mixins'
 @import 'defaults'
 
-.custom-dropdown
+*
+  +box-sizing
+
+.custom-dropdown,
+.shadow-dropdown
   margin: $default-margin 0
   position: relative
   width: 30%
