Adding callback for Shadow DOM elements

--- a/src/templates/partials/_shadow_dropdown.jade
+++ b/src/templates/partials/_shadow_dropdown.jade
@@ -3,6 +3,5 @@ include ../mixins/_dropdown.jade
 template
   style
     @import './_ui/css/main.css'
-  script(src="./_ui/js/InitShadowDropdown.js")
-  div
+  div#shadowDropdown
     +dropdown('dropdown2', 'label2', 'linklist2')
