Moving to custom dropdown tag: feature check, not fully finished

--- a/src/templates/partials/_shadow_dropdown.jade
+++ b/src/templates/partials/_shadow_dropdown.jade
@@ -1,7 +1,6 @@
 include ../mixins/_dropdown.jade
 
-template
+template.tmpl-custom-dropdown
   style
     @import './_ui/css/main.css'
-  div#shadowDropdown
-    +dropdown('dropdown2', 'label2', 'linklist2')
+  +dropdown('dropdown2', 'label2', 'linklist2')
