--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -4,42 +4,43 @@ html(lang="en")
     meta(charset="utf-8")
     title Web Components & ARIA
     link(rel="stylesheet", type="text/css", href="./_ui/css/main.css")
-    script(src="./_ui/js/CustomDropdown.js")
     script(src="./_ui/js/ShadowTemplate.js")
+    script(src="./_ui/js/ShadowDropdown.js")
+    script(src="./_ui/js/CustomDropdown.js")
     script(src="./_ui/js/main.js")
 
 body
   h1 Web Components & ARIA
   main
-  
+
   include mixins/_dropdown.jade
   include mixins/_div_button.jade
-  
+
   section
     header
       h1 Interactive Widgets
-        
+
     article
       // traditional DOM version
       h2 Dropdown DOM Widget
       +dropdown("dropdown1", "label1", "linklist1")
-      
+
     article
       // Shadow DOM version
       h2 Dropdown Web Component
-      .shadow-element
       include partials/_shadow_dropdown.jade
-      
+      shadow-dropdown
+
   section
     header
       h1 Keyboard Testing
-    
+
     article.button-widget
       h2 Div with Tab Index
       +div_button
-      
+
     article.button-widget
       h2 Shadow DOM Div with Tab Index
-      .shadow-element
       include partials/_shadow_keyboard_test.jade
-    
+      div-button
+
