Updating to use browserify

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -3,10 +3,8 @@ html(lang="en")
   head
     meta(charset="utf-8")
     title Web Components & ARIA
-    link(rel="stylesheet", type="text/css", href="./_ui/css/main.css")
-    script(src="./_ui/js/CustomDropdown.js")
-    script(src="./_ui/js/ShadowTemplate.js")
-    script(src="./_ui/js/main.js")
+    link(rel="stylesheet", type="text/css", href="./styles/main.css")
+    script(src="./scripts/main.js")
 
 body
   h1 Web Components & ARIA
