Updating CSS paths

--- a/src/templates/partials/_shadow_dropdown.jade
+++ b/src/templates/partials/_shadow_dropdown.jade
@@ -2,6 +2,6 @@ include ../mixins/_dropdown.jade
 
 template
   style
-    @import './_ui/css/main.css'
+    @import './styles/main.css'
   div#shadowDropdown
     +dropdown('dropdown2', 'label2', 'linklist2')
