--- a/src/templates/partials/_shadow_keyboard_test.jade
+++ b/src/templates/partials/_shadow_keyboard_test.jade
@@ -2,5 +2,5 @@ include ../mixins/_div_button.jade
 
 template
   style
-    @import './_ui/css/main.css'
+    @import './styles/main.css'
   +div_button
