Re-adding custom tag stuff

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -25,8 +25,8 @@ body
     article
       // Shadow DOM version
       h2 Dropdown Web Component
-      .shadow-element
       include partials/_shadow_dropdown.jade
+      shadow-dropdown
       
   section
     header
@@ -38,6 +38,6 @@ body
       
     article.button-widget
       h2 Shadow DOM Div with Tab Index
-      .shadow-element
       include partials/_shadow_keyboard_test.jade
+      div-button
     
