Adding polymer/platform with bower

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -39,4 +39,5 @@ body
         include partials/_shadow_keyboard_test.jade
         div-button
 
+  script(src="./bower_components/platform/platform.js")
   script(src="./scripts/main.js")
