Updating test page heading

--- a/src/index.jade
+++ b/src/index.jade
@@ -7,7 +7,7 @@ html(lang="en")
 
 body
   header
-    h1 Web Components & ARIA
+    h1 Web Components & Accessibility Sandbox
   main
     include templates/mixins/_dropdown.jade
     include templates/mixins/_div_button.jade
