--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -46,6 +46,17 @@
       display: block
       visibility: visible
 
-.button-widget
-  margin: $default-margin 0
-  width: 30%
+.button-group
+  background-color: #f2f2f2
+  clear: both
+  margin-bottom: $default-margin
+  max-width: 400px
+
+  article.button-widget
+    display: inline-block
+    padding: $default_margin / 2
+    margin: $default-margin 10% 0
+    vertical-align: bottom
+    width: 40%
+
+
