Adding taco article

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -95,7 +95,7 @@ button, .button {
   button:hover, button:focus, .button:hover, .button:focus {
     color: #ff00bf; }
 
-a, button, .button {
+.custom-dropdown a, button, .button {
   color: #830081;
   cursor: pointer;
   display: inline-block;
@@ -103,6 +103,7 @@ a, button, .button {
   text-decoration: none; }
 
 h1, h2, h3, p {
+  line-height: 1.25em;
   margin-bottom: 16px; }
 
 h1 {
@@ -158,14 +159,14 @@ h2 {
     display: block;
     visibility: visible; }
 
-.button-group {
+.button-group, .article-inner-wrapper {
   background-color: #f2f2f2;
   clear: both;
+  padding: 16px;
   margin-bottom: 16px;
   max-width: 400px; }
-  .button-group article.button-widget {
+  .button-group article.button-widget, .article-inner-wrapper article.button-widget {
     display: inline-block;
-    padding: 8px;
-    margin: 16px 10% 0;
+    margin-right: 16px;
     vertical-align: bottom;
     width: 40%; }
