--- a/src/index.jade
+++ b/src/index.jade
@@ -12,6 +12,13 @@ body
     include templates/mixins/_dropdown.jade
     include templates/mixins/_div_button.jade
     include templates/mixins/_button_button.jade
+
+    section
+      header
+        h1 Shadow DOM Content Test
+      include templates/partials/_shadow_article.jade
+      taco-article
+
     section
       header
         h1 Interactive Widgets
