--- a/src/styles/_defaults.sass
+++ b/src/styles/_defaults.sass
@@ -31,7 +31,7 @@ button, .button
   &:hover, &:focus
     color: $link-secondary-color
 
-a, button, .button
+.custom-dropdown a, button, .button
   color: $link-primary-color
   cursor: pointer
   display: inline-block
@@ -39,6 +39,7 @@ a, button, .button
   text-decoration: none
 
 h1, h2, h3, p
+  line-height: 1.25em
   margin-bottom: $default-margin
 
 h1
