--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -46,17 +46,16 @@
       display: block
       visibility: visible
 
-.button-group
+.button-group, .article-inner-wrapper
   background-color: #f2f2f2
   clear: both
+  padding: $default_margin
   margin-bottom: $default-margin
   max-width: 400px
 
   article.button-widget
     display: inline-block
-    padding: $default_margin / 2
-    margin: $default-margin 10% 0
+    margin-right: $default_margin
     vertical-align: bottom
     width: 40%
-
 
