Updating page title to match h1

--- a/src/index.jade
+++ b/src/index.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
-    title Web Components & ARIA
+    title Web Components & Accessibility Sandbox
     link(rel="stylesheet", type="text/css", href="./assets/styles/main.css")
 
 body
