Adding button to test content replacement

--- a/src/index.jade
+++ b/src/index.jade
@@ -16,6 +16,12 @@ body
     section
       header
         h2 Shadow DOM Content Tests
+
+      article
+        header
+          h3 Existing Content Replacement
+        button.taco-button Hello tacos
+
       include templates/partials/_shadow_article.jade
       taco-article
 
