--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -5,9 +5,11 @@
 *
   +box-sizing
 
+article
+  margin-bottom: $default_margin
+
 .custom-dropdown,
 .shadow-dropdown
-  margin: $default-margin 0
   min-width: 280px
   position: relative
   width: 30%
