Styling name tag so I don't hate it

--- a/src/index.jade
+++ b/src/index.jade
@@ -31,7 +31,8 @@ body
             @import url('./assets/styles/shadow-content.css')
           .outer
             .boilerplate
-              h3 Hi! My name is
+              h3 HELLO
+                span my name is
             .name
               h4
                 content
