--- a/src/styles/shadow-content.css
+++ b/src/styles/shadow-content.css
@@ -1,6 +1,6 @@
 .outer {
-  background: blue;
-  border: 2px solid black;
+  background: #5bc8ff;
+  border: 2px solid #5bc8ff;
   border-radius: 1em;
   font-size: 20pt;
   min-height: 7em;
@@ -13,10 +13,21 @@
   font-family: sans-serif;
   padding: 0.5em;
 }
+.boilerplate h3 {
+  margin: 0;
+}
+.boilerplate h3 span {
+  display: block;
+  font-size: 80%;
+  line-height: 85%;
+}
 .name {
   background: white;
   color: black;
-  font-family: "Marker Felt", cursive;
   font-size: 45pt;
   padding-top: 0.2em;
+}
+.name h4 {
+  margin: 0;
+  padding-bottom: 10px;
 }
