Including CSS instead of buggy import

--- a/src/index.jade
+++ b/src/index.jade
@@ -27,8 +27,7 @@ body
           h3 Name tag example
         .name-tag Bob
         template#name-tag-template
-          style
-            @import url('./assets/styles/shadow-content.css')
+          include styles/shadow-content.css
           .outer
             .boilerplate
               h3 HELLO
