--- a/src/index.jade
+++ b/src/index.jade
@@ -78,5 +78,14 @@ body
           include templates/partials/_shadow_button.jade
           button-button
 
+  footer
+    ul
+      li
+        h4 Sandbox by 
+          a(href="http://marcysutton.com/", target="_blank", title="Link opens in a new window") Marcy Sutton at Substantial.
+      li
+        h4
+          a(href="http://github.com/marcysutton/web-components-accessibility") Source on Github
+
   script(src="./assets/bower_components/platform/platform.js")
   script(src="./assets/scripts/main.js")
