Fixing template references and .remove that breaks IE

--- a/src/templates/partials/_shadow_article.jade
+++ b/src/templates/partials/_shadow_article.jade
@@ -1,4 +1,4 @@
-template
+template.taco-article
   .article-inner-wrapper
     h2
       a(href="http://baltimore.craigslist.org/crg/4298347086.html", target="_blank", title="Link opens in a new window")
