--- a/src/styles/_defaults.sass
+++ b/src/styles/_defaults.sass
@@ -15,7 +15,7 @@ $shadow-color: #999
   left: -50000px
   position: absolute
 
-body
+#container
   background: $primary-bg-color url(../images/taco-nyan.jpg) no-repeat bottom right
 
 body, button
