--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -19,7 +19,7 @@ html, body
   h1
     margin: 0
 
-main, button
+main
   padding: 20px
 
 section
@@ -69,6 +69,10 @@ article
     ul
       display: block
       visibility: visible
+
+button, .button
+  border-radius: 5px
+  padding: 10px 20px
 
 .button-group, .article-inner-wrapper
   background-color: #fff
