--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -142,7 +142,7 @@ html, body {
     margin: 0; }
 
 main {
-  padding: 20px; }
+  padding: 20px 20px 80px; }
 
 section {
   display: inline-block;
