--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html(lang="en")
   head
     meta(charset="utf-8")
     title Web Components & Accessibility Sandbox
-    link(rel="stylesheet", type="text/css", href="./assets/styles/main.css")
+    link(rel="stylesheet", type="text/css", href="assets/styles/main.css")
 
   body
     #container
@@ -88,5 +88,5 @@ html(lang="en")
             h4
               a(href="http://github.com/marcysutton/web-components-accessibility") Source on Github
 
-    script(src="./assets/bower_components/platform/platform.js")
-    script(src="./assets/scripts/main.js")
+    script(src="assets/bower_components/platform/platform.js")
+    script(src="assets/scripts/main.js")
