--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -27,6 +27,9 @@ section
   padding-right: $default_margin
   vertical-align: top
 
+  header p
+    max-width: 320px
+
 article
   margin-bottom: $default_margin
 
