--- a/src/templates/partials/_shadow_article.jade
+++ b/src/templates/partials/_shadow_article.jade
@@ -1,6 +1,6 @@
 template.taco-article
   .article-inner-wrapper
-    h2
+    h2(tabIndex="0")
       a(href="http://baltimore.craigslist.org/crg/4298347086.html", target="_blank", title="Link opens in a new window")
         | DRIVER WITH 4 WHEEL DRIVE VEHICLE NEEDED FOR EMERGENCY TACO BELL RUN
     p It's a snowy night. You have a few drinks, play some video games and then it hits you–an overwhelming desire for a taco.
