--- a/src/index.jade
+++ b/src/index.jade
@@ -93,5 +93,5 @@ html(lang="en")
             h4
               a(href="http://github.com/marcysutton/web-components-accessibility") Source on Github
 
-    script(src="node_modules/webcomponents.js/webcomponents.js")
+    script(src="assets/webcomponents.js/webcomponents.js")
     script(src="assets/scripts/main.js")
